[package]
name = "serde_can"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Convenient library for Serialize & deserialize CAN message"
homepage = "https://github.com/yuchangyuan/serde_can"
repository = "https://github.com/yuchangyuan/serde_can"
readme = "README.org"

categories = ["embedded", "hardware-support", "no-std"]

[features]
default = ["embedded-can"]
node-group = ["embedded-can"]

[dependencies]
embedded-can = { version = "0.4.1", optional = true }
serde = { version = "1.0", default-features = false }
heapless = "0.8"
thiserror-no-std = "2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
